--- a/download.html
+++ b/download.html
@@ -79,7 +79,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="https://gofile.io/d/bpfouy" class="dropdown-item" data-version="glcr-1.0.0b">
+                            <a href="https://gofile.io/d/ACqd1r" class="dropdown-item" data-version="glcr-1.0.0b">
                                 <div class="item-header">
                                     <div class="item-left">
                                         <span class="item-name">Glacier External</span>
@@ -179,4 +179,5 @@
         });
     </script>
 </body>
+
 </html>
