Fix HTML encoding issues in download.html

--- a/download.html
+++ b/download.html
@@ -128,7 +128,7 @@
                 <h2 class="changelog-title">🎃 Recent Changes</h2>
                 <div id="changelogContainer">
                     <div class="changelog-item">
-                        <div class="changelog-version">Version 1.2.11b</div>
+                        <div class="changelog-version">Executor - Version 1.2.11b</div>
                         <div class="changelog-content">
                             <p>• Improved performance and stability</p>
                             <p>• Added new features and enhancements</p>
@@ -181,3 +181,4 @@
 </body>
 
 </html>
+
