--- a/download.html
+++ b/download.html
@@ -83,7 +83,7 @@
                                 <div class="item-header">
                                     <div class="item-left">
                                         <span class="item-name">Glacier External</span>
-                                        <span class="item-version">v1.0.0b • Password: 1</span>
+                                        <span class="item-version">v1.0.0b</span>
                                     </div>
                                     <span class="badge updated-badge">Updated</span>
                                 </div>
@@ -179,4 +179,5 @@
         });
     </script>
 </body>
+
 </html>
